# hunt

./: .clang-format  .gitignore  CMakeLists.txt  aria2client.h  aria2ctrl.cpp  aria2ctrl.h  build.sh  eventlogwidget.h  eventlogwidget.ui  getaria2c.py  hunt.qrc  hunt_test.h  hunt_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scopeguard.h
cmake/: relative.cmake
src/: aria2client.cpp  aria2client.h  aria2ctrl.cpp  aria2ctrl.h  centralwidget.cpp  centralwidget.h  core.h  eventlogwidget.cpp  eventlogwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menubar.cpp  menubar.h  sidebar.cpp  sidebar.h  statusbar.cpp  statusbar.h
tests/: CMakeLists.txt  hunt_test.cpp
translations/: hunt_zh_CN.ts  translations.qrc  zh_CN.ts
